# Prophet

./: .gitignore  Cargo.toml  README.md  run.sh
MarketMaker/: decide_markets.py
X/: sample_client.py
backend/Agents/: agent_manager.py  agentic_amm.py  agentic_traders.py  sample_agent.py
backend/Exchange/: exchange.py  exchange_pool.py
backend/MarketMaker/: decide_markets.py  sample_market_listener.py
backend/X/: broadcast_posts.py
backend/X/X/: since_id.json
backend/X/X/x_scraping/: engine_service.py  fetch_and_push_40.py  market_engine.py  run_scraping.sh  show_clusters.py  since_id.json  watch_markets_log.py
backend/X/data/: posts.jsonl
frontend/: app.js  index.html  style.css
offchain/prophet_bridge/: Cargo.toml
offchain/prophet_bridge/src/: main.rs  protocol.rs  trader_server.rs  types.rs
onchain/prophet_market_program/: Cargo.toml
onchain/prophet_market_program/src/: lib.rs
