[package]
name = "prophet_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
once_cell = "1.19"

solana-client = "1.18.26"
solana-sdk = "1.18.26"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

borsh = "0.10.4"
borsh-derive = "0.10.4"
sha2 = "0.10"

dotenvy = "0.15"
